# awesome-codebase

./: .gitignore  LICENSE  README.md
Makefile/: Makefile_template
c/: ReadMe.md
c/common/: ReadMe.md  evp_aes_test.c  evp_sm4_test.c  fisher_yates_shuffle.c  print_hex_macro.c  rotate_shift.c  strtok_example.c
c/common/perform_utils/: Makefile  test.c  test.h
c/linux/common/: ReadMe.md  ror_rol.c
c/linux/kernel/: Makefile  ReadMe.md  debug2file.c  kernel_completion.c  kernel_create_file_or_dir.c  kernel_get_current_process.c  kernel_get_current_time.c  kernel_get_proc_addr.c  kernel_ioctl_sample.c  kernel_path_regex.c  kernel_semaphore.c  kernel_sleep.c  kernel_thread.c
c/linux/userland/: CMakeLists.txt  ReadMe.md  TraverseFolder.c  create_dir_or_file.c  execute_command.c  file_lock.c  fork.c  get_and_set_env.c  get_current_dir.c  get_current_time.c  get_filelist.c  get_nprocs.c  get_random.c  getopt.c  hex2bin.c  list.c  mmap.c  parse_conf.c  print_wrapper.c  share_mem.c  sockaddr_convert.c  user_ioctl_sample.c
c/linux/userland/process_daemon/: CMakeLists.txt  main.c
c/linux/userland/process_daemon/testlib/: CMakeLists.txt  test.c
c/windows/kernel/: DbgPrintByLevel.c  FindKeyboardServiceCallback.c  FltCreateDirectory.c  FltGetFileName.c  FltGetWriteBuffer.c  GetDriverObjectByName.c  GetModuleBaseAddress.c  ReadMe.md  (+8 more)
cpp/: ReadMe.txt
cpp/common/: MacroVariable.cpp  ReadMe.md
lua/: ReadMe.md  function.lua  global_test.lua  helloworld.lua  process_control.lua  typeofdata.lua
lua/loop/: for.lua  repeat_until.lua  while.lua
rust/learning/: ReadMe.md
(+116 files in other folders)
